# awesome-voice-ai-tools

./: .dockerignore  .env.example  .gitignore  API.md  CHANGELOG.md  Dockerfile  ENGINES_COMPARISON.md  INSTALL.md  README.md  START.md  TERMUX.md  app.py  colab_launcher.py  docker-compose.yml  download_models.py  install_ai.bat  install_ai.ps1  install_models.py  main.py  pyproject.toml  requirements-ai.txt  requirements-colab.txt  requirements-dev.txt  requirements-linux.txt  requirements-minimal.txt  requirements-termux.txt  requirements.txt  run_colab.ipynb  server.py  setup.py  test_endpoints.py  test_frontend.py  validation_report.md  verify_windows_install.py
backend/api/: routes.py
backend/core/: audio_eval.py  audio_utils.py  auth.py  cache_manager.py  config.py  download_manager.py  exceptions.py  health.py  language_manager.py  logger.py  model_manager.py  output_manager.py  plugin_manager.py  rate_limiter.py  security.py  security_headers.py  settings_manager.py  stt_registry.py  task_manager.py  tts_engine.py  tts_registry.py  upload_manager.py  validation.py  voice_manager.py
backend/plugins/: coqui_plugin.py  cosyvoice_plugin.py  f5_plugin.py  fish_plugin.py  kokoro_plugin.py  melotts_plugin.py  openvoice_plugin.py  parler_plugin.py  piper_plugin.py  stt_plugin_base.py  styletts2_plugin.py  tts_plugin_base.py  whisper_plugin.py
backend/plugins/builtin/: audio_effects.py  example_plugin.py  religious_content.py  stt_plugin.py
config/: default.json
docs/: arabic-tts-models.md  audio-effects-plugins.md  f5tts-setup.md  fish-speech-setup.md  human-like-voice-checklist.md  islamic-voice-tools.md  openvoice-setup.md  rvc-setup.md  voice-cloning-tools.md  xtts-setup.md
frontend/templates/: index.html
requirements/: requirements-all.txt  requirements-audio-fx.txt  requirements-bark.txt  requirements-f5tts.txt  requirements-kokoro.txt  requirements-melo.txt  requirements-server.txt  requirements-xtts.txt
scripts/: backup.sh  cleanup.sh  doctor.sh  doctor_ai.sh  download_models.sh  healthcheck.sh  install.bat  install.sh  install_ai.sh  install_colab.sh  install_linux.sh  install_termux.sh  process_voice.py  repair.sh  restart.sh  restore.sh  run.sh  stop.sh  update.sh
tests/: test_api_files.py  test_audio_utils.py  test_basic.py  test_engines.py  test_piper.py  test_stt.py  test_whisper.py
web/: app.js  index.html  style.css
